--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,21 @@
 {
-	"name": "mvccore/ext-apachedpi",
-	"description": "MvcCore_Request extension - request BasePath property correction for applications using Apache .htaccess [DPI] flag.",
-	"keywords": ["mvccore", "framework", "mvc", "request", "extension", "apache", "dpi", "discardpath", "flag"],
+	"name": "mvccore/ext-request-apachedpi",
+	"type": "library",
+	"description": "MvcCore Extension - Request - Apache DPI - request BasePath property correction for applications using Apache .htaccess [DPI] flag.",
+	"keywords": [
+		"mvc", 
+		"mvccore", 
+		"framework", 
+		"extension", 
+		"plugin", 
+		"plug-in", 
+		"ext", 
+		"request", 
+		"apache", 
+		"dpi", 
+		"discard path", 
+		"flag"
+	],
 	"license": ["BSD-3-Clause"],
 	"authors": [
 		{
@@ -11,7 +25,11 @@
 	],
 	"require": {
 		"php": ">=5.3.0",
-		"mvccore/mvccore": "^3.0"
+		"mvccore/mvccore": "^4.0"
+	},
+	"require-dev": {
+		"php": ">=5.3.0",
+		"mvccore/mvccore": "~4.0@dev"
 	},
 	"autoload": {
 		"classmap": ["src/"]
