--- a/composer.json
+++ b/composer.json
@@ -17,19 +17,21 @@
 		"flag"
 	],
 	"license": ["BSD-3-Clause"],
-	"authors": [
-		{
-			"name": "Tom Flidr",
-			"homepage": "https://github.com/tomFlidr"
-		}
-	],
+	"authors": [{
+		"name": "Tom Flidr",
+		"homepage": "https://github.com/tomFlidr"
+	}],
+	"repositories": [{
+		"type": "path",
+		"url": "../../packages"
+	}],
 	"require": {
-		"php": ">=5.3.0",
-		"mvccore/mvccore": "^4.3.1"
+		"php": ">=5.4.0",
+		"mvccore/mvccore": "dev-master"
 	},
 	"require-dev": {
-		"php": ">=5.3.0",
-		"mvccore/mvccore": "~4.3.1@dev"
+		"php": ">=5.4.0",
+		"mvccore/mvccore": "@dev"
 	},
 	"autoload": {
 		"classmap": ["src/"]
